--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <table>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="1" onclick="showSign('1')"></td>
+            <td id="2" onclick="showSign('2')"></td>
+            <td id="3" onclick="showSign('3')"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="4" onclick="showSign('4')"></td>
+            <td id="5" onclick="showSign('5')"></td>
+            <td id="6" onclick="showSign('6')"></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="7" onclick="showSign('7')"></td>
+            <td id="8" onclick="showSign('8')"></td>
+            <td id="9" onclick="showSign('9')"></td>
         </tr>
     </table>
 </body>
