--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <table>
+    <table id="playingField">
         <tr>
             <td id="1" onclick="showSign(1)"></td>
             <td id="2" onclick="showSign(2)"></td>
@@ -26,5 +26,10 @@
             <td id="9" onclick="showSign(9)"></td>
         </tr>
     </table>
+    <div id="winnerScreen" class="winner-screen d-none">
+        <img src="img/trophy.png" alt="img of trophy" width="400px">
+        <h2 id="winner"></h2>
+        <button onclick="resetGame()" type="button" class="btn btn-secondary btn-lg">Erneut spielen</button>
+    </div>
 </body>
 </html>
