--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -20,15 +20,6 @@
             <img src="img/x.ico" alt="img of X" width="50px">
         </div>
     </div>
-
-    <div id="line-0" class="horizontal-line" style="top: 270px"></div>
-    <div id="line-1" class="horizontal-line" style="top: 408px;"></div>
-    <div id="line-2" class="horizontal-line" style="top: 542px"></div>
-    <div id="line-3" class="horizontal-line make-vertical" style="left: 238px; top: 408px;"></div>
-    <div id="line-4" class="horizontal-line make-vertical" style="left: 375px; top: 408px;"></div>
-    <div id="line-5" class="horizontal-line make-vertical" style="left: 512px; top: 408px;"></div>
-    <div id="line-6" class="horizontal-line" style="left: 339px; top: 406px; transform: rotate(-45deg) scaleX(0.0); width: 371px;"></div>
-    <div id="line-7" class="horizontal-line" style="left: 339px; top: 406px; transform: rotate(45deg) scaleX(0.0); width: 371px;"></div>
 
     <table id="playingField">
         <tr>
